k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: kmmashri/go-app:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  # type: LoadBalancer removed; defaults to ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-app
